All tests are up to date
Signed-off-by: DPatti88 <patricia.nilsson@iths.se>